split out these gc options.